# embedded-unit-testing

./: Cargo.toml  README.md  README_EN.md  memory.x  openocd.cfg
.cargo/: config.toml
src/: json_macro.rs  lib.rs  main.rs
tests/: macro_custom.rs  test_demo.rs
