[package]
name = "embedded-unit-test"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "embedded-unit-test"
bench  = false
test = false

[[test]]
harness = false
name = "test_demo"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
# stm32g4xx-hal = {git = "https://github.com/stm32-rs/stm32g4xx-hal.git",features=["stm32g431","rt"]}
fugit = "0.3.7"
panic-halt = "1.0.0"

embedded-test = { version = "0.6.2" } #不要使用0.7.0-alpha.1这个版本，否则无法正常使用
log = { version = "0.4.20", optional = true }
defmt = { version = "1", optional = true }
rtt-target = { version="0.6.1", optional= true }
[features]
default = ["log"]
log = ["dep:log", "dep:rtt-target", "rtt-target/log", "embedded-test/log"]
defmt = ["dep:defmt", "dep:rtt-target", "rtt-target/defmt", "embedded-test/defmt"]

